fix(test) not working