@@ -76,10 +76,10 @@ class RoomsServiceTests {
     void submitSentence() {
         Creator creator = generateCreator();
         var room = service.save(creator);
-        room.getRounds().get(0).setSentence("sentence");
+        room.getRounds().getFirst().setSentence("sentence");
 
 
-        var actual = service.submitSentence(room, 0, "sentence");
+        var actual = service.submitSentence(room, 1, "sentence");
         assertThat(actual.get()).usingRecursiveComparison().ignoringFields("roomId.value").isEqualTo(room);
     }
 
@@ -101,7 +101,7 @@ class RoomsServiceTests {
         var room = service.save(creator);
         Song song = songBuilder().build();
         Player player = generatePlayer();
-        room.getRounds().get(0).setCurrentBoss(player);
+        room.getRounds().getFirst().setCurrentBoss(player);
 
         var actual = service.submitSong(room, 1, player.getPlayerId(), song);
         assertThat(actual.get()).usingRecursiveComparison().ignoringFields("roomId.value").isEqualTo(room);
